# GameOfLife

./: .gitignore  CMakeLists.txt  board.cpp  board.hpp  main.cpp
console/: CMakeLists.txt  main.cpp
lib/: board.cpp  board.hpp
qt/: CMakeLists.txt  GameButton.cpp  GameButton.h  MainWindow.cpp  MainWindow.h  main.cpp
wx/: CMakeLists.txt  GOLApp.cpp  GOLApp.h  GOLWindow.cpp  GOLWindow.h  GameButton.cpp  GameButton.h  build.sh  cleanup-cmake.sh  main.cpp
